2023-10-13T16:17:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6510600717 # 1263
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
* notice: last 14d: unq all: 7 4163
* notice: prev accum: outdated-unq outdated-all / unq all: 1743 165258 / 1785 169587
* notice: next accum: outdated-unq outdated-all / unq all: 1743 165258 / 1785 169682
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -93 / +3 +208 -0 -0 / 3 208
* notice: removed / changed dates: [] / [2023-09-29 2023-10-13]

2023-10-13T08:17:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6505763947 # 1262
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
* notice: last 14d: unq all: 8 4161
* notice: prev accum: outdated-unq outdated-all / unq all: 1743 165258 / 1782 169474
* notice: next accum: outdated-unq outdated-all / unq all: 1743 165258 / 1785 169587
* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -1 -93 / +3 +113 -0 -0 / 3 113
* notice: removed / changed dates: [] / [2023-09-29 2023-10-13]

2023-10-13T01:00:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6502675202 # 1261
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
* notice: last 14d: unq all: 8 4141
* notice: prev accum: outdated-unq outdated-all / unq all: 1741 164958 / 1782 169381
* notice: next accum: outdated-unq outdated-all / unq all: 1743 165258 / 1782 169474
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -75 / +3 +307 -0 -0 / 3 307
* notice: removed / changed dates: [2023-09-28] / [2023-09-29 2023-10-12]

2023-10-12T16:17:21Z: