@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-01T01:06:33Z",
-  "count" : 300,
+  "timestamp" : "2023-10-14T00:57:40Z",
+  "count" : 251,
   "count_minmax" : [ 112, 300 ],
-  "count_decinc" : [ -0, +300 ],
+  "count_decinc" : [ -49, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
