@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-10-13T16:17:00Z",
-  "count_outdated" : 165258,
-  "uniques_outdated" : 1743,
-  "count" : 169682,
+  "timestamp" : "2023-10-14T00:57:40Z",
+  "count_outdated" : 165560,
+  "uniques_outdated" : 1747,
+  "count" : 169775,
   "uniques" : 1785,
   "clones" : [
     {
-      "timestamp": "2023-09-29T00:00:00Z",
-      "count": 41,
-      "count_minmax": [ 41, 302 ],
-      "count_decinc": [ 261, 302 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 4 ],
-      "uniques_decinc": [ 2, 4 ]
-    },
-    {
       "timestamp": "2023-09-30T00:00:00Z",
-      "count": 300,
+      "count": 251,
       "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 0, 300 ],
+      "count_decinc": [ 49, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-13T00:00:00Z",
-      "count": 208,
-      "count_minmax": [ 113, 208 ],
-      "count_decinc": [ 0, 208 ],
+      "count": 301,
+      "count_minmax": [ 113, 301 ],
+      "count_decinc": [ 0, 301 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
