@@ -1,15 +1,10 @@
 {
-  "count": 4163,
+  "count": 4166,
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2023-09-29T00:00:00Z",
-      "count": 41,
-      "uniques": 2
-    },
-    {
       "timestamp": "2023-09-30T00:00:00Z",
-      "count": 300,
+      "count": 251,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-10-13T00:00:00Z",
-      "count": 208,
+      "count": 301,
       "uniques": 3
     }
   ]
